--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node backend/app.js",
+    "server": "nodemon backend/app.js"
   },
   "author": "Thibault Adelain",
   "license": "MIT",
