--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Thibault Adelain",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "express-handlebars": "^6.0.6",
+    "hash.js": "^1.1.7",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0"
   },
