--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.2.0",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -16,13 +19,15 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "react-toastify": "^8.0.0",
+    "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "tailwindcss build src/style.css -o src/dist/style.css"
   },
   "eslintConfig": {
     "extends": [
