--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "express-handlebars": "^6.0.6",
     "helmet": "^6.0.0",
     "mysql2": "^2.3.3",
+    "ngrok": "^4.3.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.23.0"
   },
   "devDependencies": {
