--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV = production
-PORT = 5000
+PORT = ****
 
-JWT_SECRET = abc123
+JWT_SECRET = *******
 
-GOOGLE_CLIENT_ID = 793391578445-a72ea3firbkbbi6hitqn0rss37uujqbb.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID = *******
+GOOGLE_CLIENT_SECRET = *******
